syntax = "proto3";

package grpcbridge.internal.bridgetest.testpb;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/renbou/grpcbridge/internal/bridgetest/testpb";

message Scalars {
  bool bool_value = 1;
  int32 int32_value = 2;
  int64 int64_value = 3;
  uint32 uint32_value = 4;
  uint64 uint64_value = 5;
  sint32 sint32_value = 6;
  sint64 sint64_value = 7;
  fixed32 fixed32_value = 8;
  fixed64 fixed64_value = 9;
  sfixed32 sfixed32_value = 10;
  sfixed64 sfixed64_value = 11;
  float float_value = 12;
  double double_value = 13;
  string string_value = 14;
  bytes bytes_value = 15;
}

enum Digits {
  option allow_alias = true;
  ZERO = 0;
  NONE = 0;
  ONE = 1;
  TWO = 2;
}

message NonScalars {
  message Child {
    message GrandChild {
      bytes bytes_value = 1;
    }

    oneof nested {
      Digits digits = 1;
      GrandChild grand_child = 2;
    }
  }

  map<string, string> str2str_map = 1;
  map<string, int32> str2int32_map = 2;
  map<int32, google.protobuf.Empty> int2empty_map = 3;
  repeated string str_list = 4;
  repeated Child msg_list = 5;
  Digits root_digits = 6;
  google.protobuf.Duration duration = 7;
}

message WellKnown {
  google.protobuf.NullValue null_value = 1;
}
